<?xml version="1.0"?>
<package format="2">
  <name>ROS_turtle_control</name>
  <version>0.0.0</version>
  <description>The ROS_turtle_control package</description>

  <maintainer email="duynamk63uet@gmail.com">Duy Nam</maintainer>

  <license>TODO</license>

  <url type="website">https://www.linkedin.com/in/duynam-uet-robotics/</url>
  <url type="website">https://www.facebook.com/duynam.robotics.uet</url>

  <author>Duy Nam</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export></export>
</package>
